# CVC_Bats_Thermal_detection

./: .gitignore  README.md  README_thermal_blob_detector_GUI.md  README_thermal_blob_detector_MVP.md  agents.md  changelog.md  installautomat.sh  license.md  preset_test.json  pyproject.toml  sample_track_points.csv  sample_track_summary.csv  start.py  start.sh  thermal_blob_detector_gui.py  thermal_blob_detector_mvp.py  thermal_blob_detector_mvp_v3_valid_tracks.py  thermal_blob_track_points.csv  thermal_blob_track_summary.csv  tracks.csv  tracks_diagnostic.csv
cvc_bats_thermal_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: thermal_blob_detector_GUI.md  thermal_blob_detector_MVP.md
examples/: preset_test.json
outputs/: sample_track_points.csv  sample_track_summary.csv
presets/: counting_config_example.json  default.json  diagnostic_all_tracks.json  full_video.json  good_current_defaults.json  loose_rescue_more_bats.json  preset_test.json  quick_500_frame_test.json  railroad_weaker.json  railroad_weaker_verification.json  railroad_weaker_verificationV2.json  strict_remove_artefacts.json  working_detect.json
src/: __init__.py  batch_processing.py  counting_geometry.py  counting_models.py  counting_stats.py  cvc_bats_auto.py  event_clips.py  gui.py  gui_command.py  thermal_blob_detector.py  thermal_blob_detector_gui.py  thermal_blob_detector_mvp_v3_valid_tracks.py
src/cvc_bats_thermal_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/thermal_bat/: __init__.py  cli.py  config.py  detector.py  exports.py  live_counting.py  models.py  pipeline.py  progress.py  validation.py  visualization.py
tests/: test_background_progress.py  test_batch_processing.py  test_counting_stats.py  test_event_clips.py  test_frame_range.py  test_gui_command.py
